===========================

Version 0.2.beta2
------------------------------
- Added: New "link target" field and help wizard to media manager
- Added: IsotopeGallery now supports link targets and "rel" attributes
- Added: Support for 13 more currencies in ePay Standard payment module
- Added: New payment module for ePay in-shop payment processing
- Added: CSS class even/odd for product list
- Fixed: Variant price should not show "From" when all variants have the same price
- Fixed: Now using core widget TimePeriod for shipping weight which has a larger select menu.
- Fixed: Printing order PDF throwed an exception
- Fixed: Use first available product type if no default/fallback is set
- Fixed: Problem with standardize function and wrong image folder (Ticket #201)
- Fixed: Incorrect reference to bcc property of a mailing object (Ticket #206)

Version 0.2.beta1 (2010-08-25)
------------------------------
- Introducing IsotopeProductCollection, abstracting a collection of products (eg. cart, order, wishlist)
- Introducing IsotopeGallery class for creating custom image galleries
- Checkout condition data is now available in order confirmation mail (Ticket #103)
- Added: Product weight field and weight units
- Added: Shipping module for price based on product weight
- Added: New payment module for ePay (www.epay.eu)
- Added: Hooks for altering product before output
- Added: Payment and and shipping module can now provide additional info for each order (trough a button/operation)
- Added: Limit panel to tl_iso_product_categories (Ticket #132)
- Added: Jumpto page support when adding product to cart (Ticket #72)
- Added: Batch invoice printing, by status
- Added: Consolidation of order management global operations into a tools menu
- Added: Backend order notes field
- Added: Option to watermark medium and large images
- Added: Store ID to group carts if you're using Isotope on multiple stores/domains
- Added: (partial) translation for french and danish