@@ -232,8 +232,10 @@ CREATE TABLE `tl_iso_config` (
   `thumbnail_size` varchar(64) NOT NULL default '',
   `gallery_size` varchar(64) NOT NULL default '',
   `medium_size` varchar(64) NOT NULL default '',
-  `medium_watermark` varchar(255) NOT NULL default '',
   `large_size` varchar(64) NOT NULL default '',
+  `gallery_watermark` varchar(255) NOT NULL default '',
+  `thumbnail_watermark` varchar(255) NOT NULL default '',
+  `medium_watermark` varchar(255) NOT NULL default '',
   `large_watermark` varchar(255) NOT NULL default '',
   `watermark_position` varchar(2) NOT NULL default '',
   `archive` int(1) unsigned NOT NULL default '0',
