@@ -66,6 +66,8 @@ $GLOBALS['TL_LANG']['tl_iso_config']['gallery_size']					= array('Gallery image 
 $GLOBALS['TL_LANG']['tl_iso_config']['thumbnail_size']					= array('Thumbnail image size', 'In pixels.');
 $GLOBALS['TL_LANG']['tl_iso_config']['medium_size']						= array('Medium image size', 'In pixels.');
 $GLOBALS['TL_LANG']['tl_iso_config']['large_size']						= array('Large image size', 'In pixels.');
+$GLOBALS['TL_LANG']['tl_iso_config']['gallery_watermark']				= array('Gallery watermark image', 'Select an image to be used as a watermark for gallery images.');
+$GLOBALS['TL_LANG']['tl_iso_config']['thumbnail_watermark']				= array('Thumbnail watermark image', 'Select an image to be used as a watermark for thumbnail images.');
 $GLOBALS['TL_LANG']['tl_iso_config']['medium_watermark']				= array('Medium watermark image', 'Select an image to be used as a watermark for medium images.');
 $GLOBALS['TL_LANG']['tl_iso_config']['large_watermark']					= array('Large watermark image', 'Select an image to be used as a watermark for large images.');
 $GLOBALS['TL_LANG']['tl_iso_config']['watermark_position']				= array('Watermark position', 'Select the position you want the watermark to be on the imgae.');
